# vscp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build-macos.yml  build-windows.yml  build.yml  unit-tests.yml
cmake/modules/: FindEXPAT.cmake  FindMosquitto.cmake
contrib/samples/autoself/: autoself-autosave.pjd  autoself.pjd  dlgabout.cpp  dlgabout.h  dlgabout_symbols.h  dlgnodeinfo.cpp  dlgnodeinfo.h  dlgnodeinfo_symbols.h  dlgnodelist.cpp  dlgnodelist.h  dlgnodelist_symbols.h  dlgselectunit.cpp  dlgselectunit.h  dlgselectunit_symbols.h  dlgsettings.cpp  dlgsettings.h  dlgsettings_symbols.h  frmNode_symbols.h  frmmain_symbols.h  frmmessagelog_symbols.h
contrib/samples/python/: gettempfromyr.py  send1wvalues.py  send_pi_cpu_temp.py  send_pi_gpu_temp.py  send_pi_onewire.py  sendvalues.py
contrib/samples/samples/esp8266/vscp_daemon_connect/: vscptest.c
contrib/samples/samples/rest/web/: index.html
contrib/samples/samples/rest/windows/: close_post.bat  open_post.bat  readevent_post.bat  status_post.bat
contrib/samples/samples/win32/mfc/CanalDiagnostic/: CanalDiagnostic.cpp  CanalDiagnostic.h  CanalDiagnosticDoc.cpp  CanalDiagnosticDoc.h  CanalDiagnosticView.cpp  CanalDiagnosticView.h  ChildFrm.cpp  ChildFrm.h  DocumentProperties.cpp  MainFrm.cpp  NewDocument.cpp  NewDocument.h  SendBurst.cpp  Splash.cpp  Splash.h
contrib/samples/win32/mfc/CanalDiagnostic/: DocumentProperties.h  MainFrm.h  SendBurst.h
contrib/samples/win32/mfc/loggerwnd/: StdAfx.h
docs/: bottom_copyright.md  cguid_class.md  sample_vscpd_configuration_file.md  setting_up_the_system.md  variables.xml  vscp_binary_frame_command_reply.md  vscpdatetime_class.md
man/: vscp-mkpasswd.1.md  vscp.7.md  vscpcmd.1.md  vscpd-tls.7.md  vscpd.8.md  vscpd.json.5.md  vscpdrivers.7.md
resources/: copyright
src/common/: byteswap_compat.h  com-linux.cpp  com-linux.h  com-win32.cpp  com-win32.h  com.cpp  com.h  comm.cpp  comm.h  configfile.cpp  configfile.h  dllist.c  dllist.h  hashtable.c  hashtable.cpp  hashtable.h  md5.cpp  md5.h  msglog.cpp  msglog.h  randpassword.cpp  randpassword.h  sockettcp.c  sockettcp.h
src/common/windows/: ntservice.cpp
src/vscp/common/: actioncodes.h  automation.cpp  automation.h  canal-macro.h  canal-xmlconfig.cpp  canal-xmlconfig.h  canaldlldef.h  clientlist.cpp  clientlist.h  devitem.h  guid.cpp  guid.h  hlo.cpp  hlo.h  interfacelist.cpp  interfacelist.h  level2drvdef.h  mdf.cpp  mdf.h  mqtt.cpp  mqtt.h  multicastsrv.cpp  multicastsrv.h  register.cpp  register.h  remotevariablecodes.h  tcpipsrv.cpp  tcpipsrv.h  udpsrv.cpp  udpsrv.h  userlist.cpp  userlist.h  version.h  vscp-bootdevice-pic1.cpp  vscp-bootdevice-pic1.h  vscp-bootdevice-vscp.cpp  vscp-bootdevice-vscp.h  vscp-bootdevice.cpp  vscp-bootdevice.h  vscp-client-base.cpp  (+35 more)
src/vscp/daemon/: controlobject.cpp  controlobject.h  devicelist.cpp  devicelist.h  devicethread.cpp  devicethread.h  vscpd.cpp  vscpd.h
src/vscp/nodejs/: README.md  package.json
src/vscp/nodejs/examples/: basic-usage.js  event-handling.js  filtering.js  test-level2.js
src/vscp/nodejs/lib/: index.js  vscp-level2-client.js
src/vscp/nodejs/types/: index.d.ts
src/vscp/python/: LICENSE  README.md  pyproject.toml
src/vscp/python/examples/: basic_usage.py  event_handling.py  filtering.py
src/vscp/python/tests/: __init__.py  test_level2_client.py
src/vscp/python/vscp_level2/: __init__.py  client.py
src/vscp/vscp-mkpasswd/: vscp-mkpasswd.cpp
src/vscp/vscpcmd/: description-pak  vscpcmd.cpp  vscpcmd.h
src/vscp/vscpcmd/doc-pak/: COPYRIGHT
src/vscp/vscphubd/: controlobject.cpp  controlobject.h  version.h  vscphubd.cpp  vscphubd.h  websocket.h  websocketsrv.cpp
src/vscp/vscphubd/win32/: vscphubd.cpp
tests/: CMakeLists.txt
tests/guid/: CMakeLists.txt  README.md  unittest.cpp
tests/helperlib/: Makefile  unittest.cpp
tests/mdfparser/: unittest.cpp
tests/multicast/: vscp.py
tests/register/: .gitignore  CMakeLists.txt  unittest.cpp
tests/tcpiptls/: CMakeLists.txt  unittest.cpp
tests/testtools/testIf/: testIf.cpp  testIf.h  testIfDlg.cpp  testIfDlg.h
tests/vscp-client-base/: CMakeLists.txt  unittest.cpp
tests/vscp-client-canal/: CMakeLists.txt  unittest.cpp
tests/vscp-client-mqtt/: CMakeLists.txt  unittest.cpp
tests/vscp-client-multicast/: CMakeLists.txt  unittest.cpp
tests/vscp-client-socketcan/: CMakeLists.txt  unittest.cpp
tests/vscp-client-udp/: CMakeLists.txt  unittest.cpp
tests/vscp-client-ws1/: CMakeLists.txt  unittest.cpp
tests/vscp-client-ws2/: CMakeLists.txt  unittest.cpp
tests/vscpdatetime/: .gitignore  CMakeLists.txt  README.md  unittest.cpp
tests/vscphelper/: CMakeLists.txt  unittest.cpp
tests/websockets/: test_ws1.js
tools/: copy_firmware_dups.bat  copy_firmware_dups.sh
